--- a/package.json
+++ b/package.json
@@ -1,46 +1,1 @@
-{
-  "name": "@smarthtmlelements/smart-calendar",
-  "version": "2.0.0",
-  "description": "Smart Calendar",
-   "scripts": { 
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/HTMLElements/smart-calendar.git"
-  },
-  "author": "Smart HTML Elements",
-  "license": "SEE LICENSE IN https://www.htmlelements.com/license/",
-  "bugs": {
-    "url": "https://github.com/HTMLElements/smart-calendar"
-  },
-  "homepage": "https://github.com/HTMLElements/smart-calendar#readme",
-  "devDependencies": {
- 
-  },
-  "dependencies": {
-    "@webcomponents/webcomponentsjs": "^1.0.22",
-     "@smarthtmlelements/smart-core": "^2.0.0"
-  },
-  "main": "index.js",
-  "directories": {},
-  "keywords": [
-	"custom",
-	"element",
-	"calendar custom element",
-	"html calendar",
-	"calendar",
-	"web components calendar",
-	"calendar element",
-	"calendars",
-	"custom calendar",
-	"calendar widget",
-	"calendar ui",
-	"calendar component",
-	"calendar control",
- 	"datepicker",
-  	"datepicker element",
-  	"datepicker user interface",
-  	"material datepicker",
-  	"material calendar"
-  ]
-}
+{"name":"@smarthtmlelements/smart-calendar","version":"4.5.0","description":"Smart Calendar","scripts":{},"repository":{"type":"git","url":"git+https://github.com/HTMLElements/smart-calendar.git"},"author":"Smart HTML Elements","license":"SEE LICENSE IN https://www.htmlelements.com/license/","bugs":{"url":"https://github.com/HTMLElements/smart-calendar"},"homepage":"https://github.com/HTMLElements/smart-calendar#readme","devDependencies":{},"dependencies":{"@webcomponents/webcomponentsjs":"^1.0.22","@smarthtmlelements/smart-core":"^2.0.0"},"main":"index.js","directories":{},"keywords":["custom","element","calendar custom element","html calendar","calendar","web components calendar","calendar element","calendars","custom calendar","calendar widget","calendar ui","calendar component","calendar control","datepicker","datepicker element","datepicker user interface","material datepicker","material calendar"]}
